Dependencies updated and WoWGuild updated
The WoWGuild setter methods are now private, as I believe they should be.

Added the com.google.code.gson package to the project dependencies in lieu of the org.json package.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,13 @@ gradlew
 gradle/wrapper/gradle-wrapper\.properties
 
 gradle/wrapper/gradle-wrapper\.jar
+
+\.project
+
+\.settings/
+
+\.vscode/
+
+algalona/\.classpath
+
+app/\.classpath
