--- a/algalonj/build.gradle
+++ b/algalonj/build.gradle
@@ -2,9 +2,8 @@ apply plugin: 'java'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    // https://mvnrepository.com/artifact/org.json/json
-    compile 'org.json:json:20140107'
-    compile 'org.asynchttpclient:async-http-client:2.1.0-alpha22'
+    // https://mvnrepository.com/artifact/com.google.gson/json
+    compile 'com.google.code.gson:gson:2.8.1'
 }
 
 sourceCompatibility = "1.7"
