Adding Algalon Companion to show how to use the library

--- a/algaloncompanion/build.gradle
+++ b/algaloncompanion/build.gradle
@@ -3,13 +3,16 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "26.0.0"
+
     defaultConfig {
-        applicationId "org.alcha.algalon"
-        minSdkVersion 23
+        applicationId "org.alcha.algaloncompanion"
+        minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -27,5 +30,4 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile project(path: ':algalona')
 }
