Added auto versioning

--- a/algalona/build.gradle
+++ b/algalona/build.gradle
@@ -1,19 +1,22 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
+apply from: 'versioning.gradle'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "26.0.0"
+    publishNonDefault true
 
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode buildVersionCode()
+        versionName version
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
