--- a/algalona/build.gradle
+++ b/algalona/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'com.jfrog.bintray'
 apply from: 'versioning.gradle'
 
 android {
@@ -36,59 +34,18 @@ dependencies {
     compile 'com.android.support:support-annotations:25.3.1'
 }
 
-install {
-    repositories.mavenInstaller {
-        pom.project {
-            name 'AlgalonA'
-            description 'A wrapper library for basic functions of Battle.net APIs'
-            url 'https://github.com/Alcha/Algalon'
-            inceptionYear '2017'
-
-            packaging 'aar'
-            groupId 'com.alcha'
-            artifactId 'algalona'
-            version '0.2'
-
-            licenses {
-                license {
-                    name 'The MIT License'
-                    url 'https://choosealicense.com/licenses/mit/'
-                    distribution 'repo'
-                }
-            }
-            scm {
-                connection 'https://github.com/alcha/algalon.git'
-                url 'https://github.com/alcha/algalon'
-
-            }
-            developers {
-                developer {
-                    name 'Alcha'
-                }
-            }
-        }
-    }
+task deleteJar(type: Delete) {
+    delete 'libs/algalon.jar'
 }
 
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-    // jFrog plugin must be declared for this line to work
-    configurations = ['archives']
-    // Package info for BinTray
-    pkg {
-        repo = 'maven'
-        name = 'algalona'
-        userOrg = user
-        licenses = ['MIT']
-        vcsUrl = 'https://github.com/Alcha/Algalon.git'
-        version {
-            name = '0.2'
-            desc = 'Android library for Battle.net API.'
-            vcsTag = '0.2'
-        }
-    }
+task createJar(type: Copy) {
+    from('build/intermediates/bundles/release')
+    into('libs/')
+    include('classes.jar')
+    rename('classes.jar', 'algalon.jar')
 }
+
+createJar.dependsOn(deleteJar, build)
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.4'
