--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,75 @@
-group 'org.alcha'
-version '0.0.2'
-
 apply plugin: 'java'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'maven-publish'
 
 sourceCompatibility = 1.7
 
+buildscript {
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
+    }
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 repositories {
     mavenCentral()
+    jcenter()
 }
+
+group = project.property('groupId')
+artifactId = project.property('artifactId')
+version = project.property('version')
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'com.google.code.gson:gson:2.8.1'
+}
+
+publishing {
+    publications {
+        MyPublication(MavenPublication) {
+            from components.java
+            groupId group
+            artifactId artifactId
+            version version
+        }
+    }
+}
+
+bintray {
+    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    publications = ['MyPublication']
+
+    configurations = ['archives']
+    pkg {
+        repo = 'maven'
+        name = artifactId
+        licenses = ['MIT']
+        vcsUrl = project.property('gitUrl')
+        labels = [
+                'android', 'java', 'battle.net',
+                'wow', 'sc2', 'd3',
+                'World of Warcraft', 'Starcraft II', 'Starcraft 2',
+                'Diablo III', 'Diablo 3', 'Blizzard'
+        ]
+        publicDownloadNumbers = true
+        version {
+            name = version
+            desc = 'Khadgar Release'
+            vcsTag = version
+        }
+    }
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.4'
 }
